CSS fixes for filter menu on mobile

--- a/monocle/static/css/spritesheet.css
+++ b/monocle/static/css/spritesheet.css
@@ -7,7 +7,7 @@
 #menu.sprite span {
   position: relative;
   float: left;
-  left: 110px;
+  left: 90px;
 }
 
 .sprite-1 {
